# booking-headless

./: CONTRIBUTING.md  Cargo.toml  README.md
migrations/: 20251101135200_create_initial_tables.sql
scripts/: pre-commit
src/: config.rs  main.rs
src/routes/: appointment_routes.rs  auth_routes.rs  mod.rs  service_routes.rs  user_routes.rs  utils_routes.rs
src/structs/: db_struct.rs  mod.rs  response_struct.rs  util_struct.rs
src/utils/: auth_utils.rs  mod.rs  response_utils.rs
