[package]
name = "booking"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
