[package]
name = "booking"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
serde_json = "1.0.145"
gcloud-storage = { version = "1.1.1", default-features = false, features = [
    "rustls-tls",
    "auth",
] }
